--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "buefy": "^0.6.6",
     "bulma": "^0.7.1",
     "firebase": "^5.2.0",
